hotfix:Instruction btn overflow fix in art-feature

--- a/css/art-feature.css
+++ b/css/art-feature.css
@@ -91,7 +91,6 @@ input {
   font-weight: bold;
   border: none;
   height: 50%;
-  width: 110px;
   margin-top: 20px;
   border-radius: 5px;
   padding: 15px;
